<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.InfoActivity"
    android:background="#EEEEEE"
    >

    <TextView
        android:id="@+id/id_about_app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_gradient"
        android:fontFamily="@font/aldrich"
        android:padding="10dp"
        android:text="About App"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <ScrollView
        android:layout_above="@+id/id_next_btn"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:background="#ffffff"
        android:layout_below="@+id/id_about_app_title"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/id_about_app_text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app1"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:id="@+id/id_about_app_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app2"
                android:layout_below="@+id/id_about_app_text1"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:id="@+id/id_about_app_text3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app3"
                android:layout_below="@+id/id_about_app_text2"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:id="@+id/id_about_app_text4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app4"
                android:layout_below="@+id/id_about_app_text3"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />

            <TextView
                android:id="@+id/id_about_app_text5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app5"
                android:layout_below="@+id/id_about_app_text4"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
            <TextView
                android:id="@+id/id_about_app_text6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app5"
                android:layout_below="@+id/id_about_app_text5"
                android:background="@drawable/info_card_background"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/id_next_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/btn_background_red"
        android:text="Next >>>"
        android:textColor="#ffffff"
        android:textSize="17sp"
        android:textAllCaps="false" />

</RelativeLayout>