<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0DFDF"
    tools:context=".Activities.CoronaInfoActivity">

    <TextView
        android:id="@+id/id_aboutCorona_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_gradient"
        android:fontFamily="@font/aldrich"
        android:padding="10dp"
        android:text="About Corona"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20sp"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/id_aboutCorona_title"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:id="@+id/id_aboutCorona_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Coronavirus disease (COVID-19) is an infectious disease caused by a newly discovered coronavirus. Most people who fall sick with COVID-19 will experience mild to moderate symptoms and recover without special treatment."
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/bg_buttons2"
                android:layout_marginTop="5dp"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                />
            <TextView
                android:id="@+id/id_howitSpreads_title"
                android:layout_below="@+id/id_aboutCorona_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="1.  How it spreads?"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:background="@drawable/card_background_red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                />

            <TextView
                android:id="@+id/id_howItSpreads_details_text"
                android:layout_below="@+id/id_howitSpreads_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/howItSpreads"
                android:background="#ffffff"
                android:textSize="17sp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:nestedScrollingEnabled="true"
                android:layout_margin="10dp"
                android:visibility="gone"
                />

            <TextView
                android:id="@+id/id_symptoms_title"
                android:layout_below="@+id/id_howItSpreads_details_text"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="2.  Symptoms"
                android:paddingStart="20dp"
                android:background="@drawable/card_background_red"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="8dp"
                android:textColor="#ffffff"
                android:textSize="18sp"
                />

                <TextView
                    android:id="@+id/id_symptoms_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/id_symptoms_title"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:background="#ffffff"
                    android:lineSpacingExtra="3dp"
                    android:padding="7dp"
                    android:paddingTop="10dp"
                    android:text="Common symptoms"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                        android:id="@+id/id_symptoms_text2"
                        android:layout_below="@+id/id_symptoms_text1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/common_symptoms"
                        android:background="#ffffff"
                        android:textSize="17sp"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:lineSpacingExtra="3dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                    android:visibility="gone"
                        />

                <TextView
                    android:id="@+id/id_symptoms_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/id_symptoms_text2"
                    android:layout_alignParentEnd="true"
                    android:background="#ffffff"
                    android:padding="7dp"
                    android:text="Other people may also experience :"
                    android:textColor="#000000"
                    android:lineSpacingExtra="3dp"
                    android:textSize="18sp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                        android:id="@+id/id_symptoms_text4"
                        android:layout_below="@id/id_symptoms_text3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/other_symptoms"
                        android:textSize="17sp"
                        android:background="#ffffff"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:paddingBottom="5dp"
                        android:lineSpacingExtra="3dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                    android:visibility="gone"
                        />


                <TextView
                    android:id="@+id/id_prevention_title"
                    android:layout_below="@id/id_symptoms_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="3.  Preventions"
                    android:paddingStart="20dp"
                    android:background="@drawable/card_background_red"
                    android:padding="8dp"
                    android:textColor="#ffffff"
                    android:textSize="18sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:id="@+id/id_preventions_text1"
                    android:layout_below="@+id/id_prevention_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="To prevent the spread of COVID-19:"
                    android:textColor="#000000"
                    android:padding="7dp"
                    android:textSize="18sp"
                    android:lineSpacingExtra="3dp"
                    android:background="#ffffff"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_preventions_text2"
                    android:layout_below="@+id/id_preventions_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/preventions"
                    android:background="#ffffff"
                    android:textSize="17sp"
                    android:paddingStart="15dp"
                    android:lineSpacingExtra="3dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_treatment_title"
                    android:layout_below="@+id/id_preventions_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="4.  Treatments"
                    android:paddingStart="20dp"
                    android:background="@drawable/card_background_red"
                    android:padding="8dp"
                    android:textSize="18sp"
                    android:textColor="#ffffff"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    />

                <TextView
                    android:id="@+id/id_treatment_text1"
                    android:layout_below="@+id/id_treatment_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="To date, there are no specific vaccines or medicines for COVID-19. World Health Organization."
                    android:textColor="#000000"
                    android:padding="7dp"
                    android:textSize="17sp"
                    android:background="#ffffff"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_treatment_text2"
                    android:layout_below="@+id/id_treatment_text1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Self care"
                    android:padding="7dp"
                    android:textSize="17sp"
                    android:background="#ffffff"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#000000"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_treatment_text3"
                    android:layout_below="@+id/id_treatment_text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/self_care_treatments"
                    android:background="#ffffff"
                    android:textSize="17sp"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_treatment_text4"
                    android:layout_below="@+id/id_treatment_text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Medical treatments"
                    android:padding="7dp"
                    android:textSize="17sp"
                    android:background="#ffffff"
                    android:lineSpacingExtra="3dp"
                    android:textColor="#000000"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

                <TextView
                    android:id="@+id/id_treatment_text5"
                    android:layout_below="@+id/id_treatment_text4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medical_treatments"
                    android:paddingStart="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="5dp"
                    android:textSize="17sp"
                    android:background="#ffffff"
                    android:lineSpacingExtra="3dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:visibility="gone"
                    />

            <TextView
                android:layout_below="@+id/id_treatment_text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Source - World Health Organization"
                android:padding="5dp"
                android:textSize="14sp"
                android:background="#F7EDC4"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>